syntax = "proto3";

package pb;
option go_package = "./pb";

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message UserResponseStream {
    string status = 1;
    User user = 2;
}

service UserService {
    rpc GetUser(User) returns (User);
    rpc AddUserVerbose(User) returns (stream UserResponseStream);
}